Created page with "== Rohové výřezy =="

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -199,7 +199,9 @@
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> pro zav&#345;en&iacute; panelu &uacute;kol&#367;.</li></ol></li>
 <li>Nyn&iacute; byste m&#283;li m&iacute;t pevn&eacute; t&#283;leso, jak je zn&aacute;zorn&#283;no na <b>Obr.: MP3</b>.</li></ol>
 <div style="clear:both"></div>
-<h2><span class="mw-headline" id="Corner_cutouts">Corner cutouts</span></h2>
+<p><span id="Corner_cutouts"></span>
+</p>
+<h2><span id="Rohov.C3.A9_v.C3.BD.C5.99ezy"></span><span class="mw-headline" id="Rohov&eacute;_v&yacute;&#345;ezy">Rohov&eacute; v&yacute;&#345;ezy</span></h2>
 <p>For the corner cutouts two features are added to the model. A <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">pocket</a>, based on another sketch, is used to create the first cutout, and this feature is then <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">mirrored</a>.
 </p><p><b><big>Sketch002</big></b>
 </p>
@@ -405,13 +407,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180000
+Cached time: 20260120180113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.315 seconds
-Real time usage: 1.650 seconds
-Preprocessor visited node count: 833/1000000
+CPU time usage: 0.349 seconds
+Real time usage: 1.564 seconds
+Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41811/2097152 bytes
 Template argument size: 11567/2097152 bytes
 Highest expansion depth: 5/100
@@ -421,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  230.580      1 -total
- 38.73%   89.294      1 Template:Sketcher_Tools_navi/cs
- 27.75%   63.978      3 Template:Navigation_menu_2
- 15.54%   35.835      1 Template:PartDesign_Tools_navi/cs
-  8.46%   19.506      1 Template:Userdocnavi/cs
-  8.04%   18.548      1 Template:TutorialInfo
-  7.59%   17.496      7 Template:ComboBox
-  5.14%   11.851      8 Template:KEY
-  4.98%   11.478      5 Template:Clear
-  3.62%    8.338     19 Template:Button
+100.00%  157.133      1 -total
+ 20.76%   32.621      1 Template:Userdocnavi/cs
+ 15.79%   24.811      1 Template:PartDesign_Tools_navi/cs
+ 15.23%   23.924      1 Template:Sketcher_Tools_navi/cs
+ 13.36%   20.990      7 Template:ComboBox
+  9.79%   15.383      3 Template:Navigation_menu_2
+  8.66%   13.605     19 Template:Button
+  6.65%   10.447      1 Template:Version
+  5.57%    8.750      8 Template:KEY
+  3.81%    5.983      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120175958 and revision id 1741647. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180112 and revision id 1741649. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
