--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -202,7 +202,7 @@
 <p><span id="Corner_cutouts"></span>
 </p>
 <h2><span id="Rohov.C3.A9_v.C3.BD.C5.99ezy"></span><span class="mw-headline" id="Rohov&eacute;_v&yacute;&#345;ezy">Rohov&eacute; v&yacute;&#345;ezy</span></h2>
-<p>For the corner cutouts two features are added to the model. A <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">pocket</a>, based on another sketch, is used to create the first cutout, and this feature is then <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">mirrored</a>.
+<p>Pro v&yacute;&#345;ezy roh&#367; jsou do modelu p&#345;id&aacute;ny dva prvky. <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>, na z&aacute;klad&#283; jin&eacute;ho n&aacute;&#269;rtu se pou&#382;ije k vytvo&#345;en&iacute; prvn&iacute;ho v&yacute;&#345;ezu a tento prvek se pot&eacute; <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">zrcadl&iacute;</a>.
 </p><p><b><big>Sketch002</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk2_start.png&amp;filetimestamp=20221104095447&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk2_start.png" decoding="async" width="299" height="185" class="mw-file-element" data-file-width="299" data-file-height="185"></a><figcaption>Fig: CC1</figcaption></figure>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180113
+Cached time: 20260120180310
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.349 seconds
-Real time usage: 1.564 seconds
+CPU time usage: 0.336 seconds
+Real time usage: 1.437 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41811/2097152 bytes
 Template argument size: 11567/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  157.133      1 -total
- 20.76%   32.621      1 Template:Userdocnavi/cs
- 15.79%   24.811      1 Template:PartDesign_Tools_navi/cs
- 15.23%   23.924      1 Template:Sketcher_Tools_navi/cs
- 13.36%   20.990      7 Template:ComboBox
-  9.79%   15.383      3 Template:Navigation_menu_2
-  8.66%   13.605     19 Template:Button
-  6.65%   10.447      1 Template:Version
-  5.57%    8.750      8 Template:KEY
-  3.81%    5.983      1 Template:TutorialInfo
+100.00%  108.709      1 -total
+ 28.80%   31.313      1 Template:PartDesign_Tools_navi/cs
+ 24.44%   26.565      1 Template:Sketcher_Tools_navi/cs
+ 21.06%   22.891      1 Template:Userdocnavi/cs
+ 15.18%   16.500      3 Template:Navigation_menu_2
+  5.75%    6.253      3 Template:CheckBox
+  3.52%    3.824      7 Template:ComboBox
+  3.51%    3.811      1 Template:TutorialInfo
+  3.20%    3.484      1 Template:Version
+  2.61%    2.836      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180112 and revision id 1741649. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180310 and revision id 1741651. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
