--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -208,7 +208,7 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk2_start.png&amp;filetimestamp=20221104095447&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk2_start.png" decoding="async" width="299" height="185" class="mw-file-element" data-file-width="299" data-file-height="185"></a><figcaption>Fig: CC1</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk2_eg01.png&amp;filetimestamp=20221104104640&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk2_eg01.png" decoding="async" width="300" height="200" class="mw-file-element" data-file-width="319" data-file-height="213"></a><figcaption>Fig: CC2</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk2_end.png&amp;filetimestamp=20221226111831&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk2_end.png" decoding="async" width="300" height="290" class="mw-file-element" data-file-width="343" data-file-height="332"></a><figcaption>Fig: CC3</figcaption></figure>
-<p><b>Step A: Hide the solid</b>
+<p><b>Krok A: Skryt&iacute; t&#283;lesa</b>
 </p>
 <dl><dd>Hide the just created solid: Select <b>Pad</b> and click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Spacebar</span>.</dd></dl>
 <p><b>Step B: Create the sketch</b>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180310
+Cached time: 20260120180406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.336 seconds
-Real time usage: 1.437 seconds
+Real time usage: 1.412 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41811/2097152 bytes
 Template argument size: 11567/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.709      1 -total
- 28.80%   31.313      1 Template:PartDesign_Tools_navi/cs
- 24.44%   26.565      1 Template:Sketcher_Tools_navi/cs
- 21.06%   22.891      1 Template:Userdocnavi/cs
- 15.18%   16.500      3 Template:Navigation_menu_2
-  5.75%    6.253      3 Template:CheckBox
-  3.52%    3.824      7 Template:ComboBox
-  3.51%    3.811      1 Template:TutorialInfo
-  3.20%    3.484      1 Template:Version
-  2.61%    2.836      8 Template:KEY
+100.00%  192.474      1 -total
+ 25.12%   48.354      1 Template:Userdocnavi/cs
+ 19.54%   37.609      1 Template:PartDesign_Tools_navi/cs
+ 18.73%   36.051      3 Template:Navigation_menu_2
+ 13.97%   26.879      1 Template:Sketcher_Tools_navi/cs
+  8.92%   17.160      3 Template:CheckBox
+  6.05%   11.652      1 Template:TutorialInfo
+  5.19%    9.988      1 Template:Version
+  4.17%    8.023      5 Template:Clear
+  4.13%    7.948      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180310 and revision id 1741651. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180405 and revision id 1741654. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
