Created page with ": Skryjte právě vytvořené těleso: Vyberte '''Pad''' a klikněte na {{KEY|Mezerník}}."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -210,7 +210,7 @@
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk2_end.png&amp;filetimestamp=20221226111831&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk2_end.png" decoding="async" width="300" height="290" class="mw-file-element" data-file-width="343" data-file-height="332"></a><figcaption>Fig: CC3</figcaption></figure>
 <p><b>Krok A: Skryt&iacute; t&#283;lesa</b>
 </p>
-<dl><dd>Hide the just created solid: Select <b>Pad</b> and click the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Spacebar</span>.</dd></dl>
+<dl><dd>Skryjte pr&aacute;v&#283; vytvo&#345;en&eacute; t&#283;leso: Vyberte <b>Pad</b> a klikn&#283;te na <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mezern&iacute;k</span>.</dd></dl>
 <p><b>Step B: Create the sketch</b>
 </p>
 <dl><dd>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a sketch attached to the <b>XZ_Plane</b>. The sketch will be named <b>Sketch002</b>.</dd></dl>
@@ -407,15 +407,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180406
+Cached time: 20260120180609
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.336 seconds
-Real time usage: 1.412 seconds
+CPU time usage: 0.333 seconds
+Real time usage: 1.607 seconds
 Preprocessor visited node count: 834/1000000
-Post&#8208;expand include size: 41811/2097152 bytes
-Template argument size: 11567/2097152 bytes
+Post&#8208;expand include size: 41812/2097152 bytes
+Template argument size: 11568/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  192.474      1 -total
- 25.12%   48.354      1 Template:Userdocnavi/cs
- 19.54%   37.609      1 Template:PartDesign_Tools_navi/cs
- 18.73%   36.051      3 Template:Navigation_menu_2
- 13.97%   26.879      1 Template:Sketcher_Tools_navi/cs
-  8.92%   17.160      3 Template:CheckBox
-  6.05%   11.652      1 Template:TutorialInfo
-  5.19%    9.988      1 Template:Version
-  4.17%    8.023      5 Template:Clear
-  4.13%    7.948      7 Template:ComboBox
+100.00%  187.487      1 -total
+ 18.72%   35.101      1 Template:PartDesign_Tools_navi/cs
+ 17.17%   32.193      3 Template:Navigation_menu_2
+ 15.30%   28.692      1 Template:Userdocnavi/cs
+ 15.13%   28.364      1 Template:Sketcher_Tools_navi/cs
+ 14.47%   27.127      7 Template:ComboBox
+  9.95%   18.648      5 Template:Clear
+  6.77%   12.696      1 Template:TutorialInfo
+  5.15%    9.657      1 Template:Version
+  3.99%    7.480     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180405 and revision id 1741654. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180607 and revision id 1741656. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
