--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -211,7 +211,7 @@
 <p><b>Krok A: Skryt&iacute; t&#283;lesa</b>
 </p>
 <dl><dd>Skryjte pr&aacute;v&#283; vytvo&#345;en&eacute; t&#283;leso: Vyberte <b>Pad</b> a klikn&#283;te na <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mezern&iacute;k</span>.</dd></dl>
-<p><b>Step B: Create the sketch</b>
+<p><b>Krok B: Vytvo&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <dl><dd>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a sketch attached to the <b>XZ_Plane</b>. The sketch will be named <b>Sketch002</b>.</dd></dl>
 <p><b>Step C: Add geometry</b>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180609
+Cached time: 20260120180641
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.333 seconds
-Real time usage: 1.607 seconds
+CPU time usage: 0.326 seconds
+Real time usage: 1.759 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41812/2097152 bytes
 Template argument size: 11568/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  187.487      1 -total
- 18.72%   35.101      1 Template:PartDesign_Tools_navi/cs
- 17.17%   32.193      3 Template:Navigation_menu_2
- 15.30%   28.692      1 Template:Userdocnavi/cs
- 15.13%   28.364      1 Template:Sketcher_Tools_navi/cs
- 14.47%   27.127      7 Template:ComboBox
-  9.95%   18.648      5 Template:Clear
-  6.77%   12.696      1 Template:TutorialInfo
-  5.15%    9.657      1 Template:Version
-  3.99%    7.480     19 Template:Button
+100.00%  179.747      1 -total
+ 25.89%   46.538      1 Template:PartDesign_Tools_navi/cs
+ 19.49%   35.040      1 Template:Userdocnavi/cs
+ 19.33%   34.749      1 Template:Sketcher_Tools_navi/cs
+  8.82%   15.850      7 Template:ComboBox
+  8.57%   15.396      3 Template:Navigation_menu_2
+  5.34%    9.598      1 Template:Version
+  4.03%    7.251      5 Template:Clear
+  3.91%    7.035     19 Template:Button
+  3.56%    6.396      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180607 and revision id 1741656. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180639 and revision id 1741658. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
