--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -213,7 +213,7 @@
 <dl><dd>Skryjte pr&aacute;v&#283; vytvo&#345;en&eacute; t&#283;leso: Vyberte <b>Pad</b> a klikn&#283;te na <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mezern&iacute;k</span>.</dd></dl>
 <p><b>Krok B: Vytvo&#345;en&iacute; n&aacute;&#269;rtu</b>
 </p>
-<dl><dd>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a sketch attached to the <b>XZ_Plane</b>. The sketch will be named <b>Sketch002</b>.</dd></dl>
+<dl><dd>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_XZ</b>. N&aacute;&#269;rt bude pojmenov&aacute;n <b>Sketch002</b>.</dd></dl>
 <p><b>Step C: Add geometry</b>
 </p>
 <ol><li>Select <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Create rectangle</a>, and create a rectangle. Do not create it too near an axis, to avoid any automatic constraints that would make it difficult to move it into the correct position later.</li>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180641
+Cached time: 20260120180850
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.326 seconds
-Real time usage: 1.759 seconds
+CPU time usage: 0.305 seconds
+Real time usage: 1.603 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41812/2097152 bytes
 Template argument size: 11568/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  179.747      1 -total
- 25.89%   46.538      1 Template:PartDesign_Tools_navi/cs
- 19.49%   35.040      1 Template:Userdocnavi/cs
- 19.33%   34.749      1 Template:Sketcher_Tools_navi/cs
-  8.82%   15.850      7 Template:ComboBox
-  8.57%   15.396      3 Template:Navigation_menu_2
-  5.34%    9.598      1 Template:Version
-  4.03%    7.251      5 Template:Clear
-  3.91%    7.035     19 Template:Button
-  3.56%    6.396      1 Template:TutorialInfo
+100.00%  204.351      1 -total
+ 18.52%   37.853      1 Template:PartDesign_Tools_navi/cs
+ 17.33%   35.406      1 Template:Userdocnavi/cs
+ 13.84%   28.275      1 Template:Sketcher_Tools_navi/cs
+  7.15%   14.616      3 Template:Navigation_menu_2
+  7.03%   14.358     19 Template:Button
+  6.65%   13.580      3 Template:CheckBox
+  6.17%   12.605      1 Template:Version
+  5.85%   11.958      7 Template:ComboBox
+  5.78%   11.819      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180639 and revision id 1741658. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180849 and revision id 1741660. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
