Created page with "# Vyberte [[File:Sketcher_CreateRectangle.svg|24px|link=Sketcher_CreateRectangle]] [[Sketcher_CreateRectangle|Vytvořit obdélník]] a vytvořte obdélník. Nevytvářejte ho příliš blízko osy, aby nedošlo k automatickým vazbám, které by později ztěžovaly jeho přesunutí do správné pozice. # Ukončete nástroj."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -216,8 +216,8 @@
 <dl><dd>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_XZ</b>. N&aacute;&#269;rt bude pojmenov&aacute;n <b>Sketch002</b>.</dd></dl>
 <p><b>Krok C: P&#345;id&aacute;n&iacute; geometrie</b>
 </p>
-<ol><li>Select <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Create rectangle</a>, and create a rectangle. Do not create it too near an axis, to avoid any automatic constraints that would make it difficult to move it into the correct position later.</li>
-<li>Exit the tool.</li></ol>
+<ol><li>Vyberte <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Vytvo&#345;it obd&eacute;ln&iacute;k</a> a vytvo&#345;te obd&eacute;ln&iacute;k. Nevytv&aacute;&#345;ejte ho p&#345;&iacute;li&scaron; bl&iacute;zko osy, aby nedo&scaron;lo k automatick&yacute;m vazb&aacute;m, kter&eacute; by pozd&#283;ji zt&#283;&#382;ovaly jeho p&#345;esunut&iacute; do spr&aacute;vn&eacute; pozice.</li>
+<li>Ukon&#269;ete n&aacute;stroj.</li></ol>
 <p><b>Step D: Assign dimensional constraints</b>
 </p>
 <ol><li>Select one of the horizontal lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal distance constraint</a>, and assign a value of <b>11 mm</b>.</li>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120180924
+Cached time: 20260120181439
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.309 seconds
-Real time usage: 1.636 seconds
+CPU time usage: 0.301 seconds
+Real time usage: 1.528 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41812/2097152 bytes
 Template argument size: 11568/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  172.171      1 -total
- 17.37%   29.904      1 Template:PartDesign_Tools_navi/cs
- 16.30%   28.070      1 Template:Userdocnavi/cs
- 14.06%   24.210      1 Template:Sketcher_Tools_navi/cs
-  9.68%   16.662      3 Template:Navigation_menu_2
-  8.73%   15.023      3 Template:CheckBox
-  8.05%   13.854      1 Template:Version
-  7.36%   12.666      7 Template:ComboBox
-  7.22%   12.430      1 Template:TutorialInfo
-  6.87%   11.831     19 Template:Button
+100.00%  188.861      1 -total
+ 20.47%   38.658      1 Template:PartDesign_Tools_navi/cs
+ 19.43%   36.698      1 Template:Sketcher_Tools_navi/cs
+ 14.07%   26.565      1 Template:Userdocnavi/cs
+ 13.72%   25.914      3 Template:Navigation_menu_2
+  9.32%   17.594      7 Template:ComboBox
+  8.59%   16.228      1 Template:TutorialInfo
+  7.51%   14.190      8 Template:KEY
+  5.45%   10.284      3 Template:CheckBox
+  3.44%    6.494      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120180922 and revision id 1741662. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120181438 and revision id 1741664. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
