--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -218,7 +218,7 @@
 </p>
 <ol><li>Vyberte <span typeof="mw:File"><a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Vytvo&#345;it obd&eacute;ln&iacute;k</a> a vytvo&#345;te obd&eacute;ln&iacute;k. Nevytv&aacute;&#345;ejte ho p&#345;&iacute;li&scaron; bl&iacute;zko osy, aby nedo&scaron;lo k automatick&yacute;m vazb&aacute;m, kter&eacute; by pozd&#283;ji zt&#283;&#382;ovaly jeho p&#345;esunut&iacute; do spr&aacute;vn&eacute; pozice.</li>
 <li>Ukon&#269;ete n&aacute;stroj.</li></ol>
-<p><b>Step D: Assign dimensional constraints</b>
+<p><b>Krok D: P&#345;i&#345;azen&iacute; rozm&#283;rov&yacute;ch vazeb</b>
 </p>
 <ol><li>Select one of the horizontal lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal distance constraint</a>, and assign a value of <b>11 mm</b>.</li>
 <li>Select one of the vertical lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertical distance constraint</a>, and assign a value of <b>5 mm</b>.</li>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120181439
+Cached time: 20260120181514
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.301 seconds
-Real time usage: 1.528 seconds
+CPU time usage: 0.336 seconds
+Real time usage: 1.776 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41812/2097152 bytes
 Template argument size: 11568/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  188.861      1 -total
- 20.47%   38.658      1 Template:PartDesign_Tools_navi/cs
- 19.43%   36.698      1 Template:Sketcher_Tools_navi/cs
- 14.07%   26.565      1 Template:Userdocnavi/cs
- 13.72%   25.914      3 Template:Navigation_menu_2
-  9.32%   17.594      7 Template:ComboBox
-  8.59%   16.228      1 Template:TutorialInfo
-  7.51%   14.190      8 Template:KEY
-  5.45%   10.284      3 Template:CheckBox
-  3.44%    6.494      5 Template:Clear
+100.00%  135.868      1 -total
+ 31.03%   42.158      1 Template:PartDesign_Tools_navi/cs
+ 18.12%   24.615      1 Template:Userdocnavi/cs
+ 12.09%   16.420      1 Template:Sketcher_Tools_navi/cs
+  9.10%   12.362     19 Template:Button
+  8.87%   12.045      3 Template:Navigation_menu_2
+  6.82%    9.263      1 Template:Version
+  4.55%    6.187      7 Template:ComboBox
+  4.44%    6.033      8 Template:KEY
+  4.41%    5.987      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120181438 and revision id 1741664. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120181512 and revision id 1741666. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
