Created page with "# Vyberte jednu z vodorovných linií, použijte [[File:Sketcher_ConstrainDistanceX.svg|24px|link=Sketcher_ConstrainDistanceX]] [[Sketcher_ConstrainDistanceX|Vazbu horizontální vzdálenosti]] a přiřaďte hodnotu '''11 mm'''. # Vyberte jednu z vertikálních linií, použijte [[File:Sketcher_ConstrainDistanceY.svg|24px|link=Sketcher_ConstrainDistanceY]] [[Sketcher_ConstrainDistanceY|Vazbu vertikální vzdálenosti]] a přiřaďte hodnotu '''5 mm'''. # Měli byste zís..."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -220,9 +220,9 @@
 <li>Ukon&#269;ete n&aacute;stroj.</li></ol>
 <p><b>Krok D: P&#345;i&#345;azen&iacute; rozm&#283;rov&yacute;ch vazeb</b>
 </p>
-<ol><li>Select one of the horizontal lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal distance constraint</a>, and assign a value of <b>11 mm</b>.</li>
-<li>Select one of the vertical lines, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertical distance constraint</a>, and assign a value of <b>5 mm</b>.</li>
-<li>You should obtain something similar to <b>Fig: CC1</b>.</li></ol>
+<ol><li>Vyberte jednu z vodorovn&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te hodnotu <b>11 mm</b>.</li>
+<li>Vyberte jednu z vertik&aacute;ln&iacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te hodnotu <b>5 mm</b>.</li>
+<li>M&#283;li byste z&iacute;skat n&#283;co podobn&eacute;ho jako na <b>Obr.: CC1</b>.</li></ol>
 <p><b>Step E: Close the sketch</b>
 </p>
 <dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>. <b>Sketch002</b> is not fully constrained at this stage.</dd></dl>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120181514
+Cached time: 20260120182823
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.336 seconds
-Real time usage: 1.776 seconds
+CPU time usage: 0.306 seconds
+Real time usage: 1.477 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41812/2097152 bytes
 Template argument size: 11568/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  135.868      1 -total
- 31.03%   42.158      1 Template:PartDesign_Tools_navi/cs
- 18.12%   24.615      1 Template:Userdocnavi/cs
- 12.09%   16.420      1 Template:Sketcher_Tools_navi/cs
-  9.10%   12.362     19 Template:Button
-  8.87%   12.045      3 Template:Navigation_menu_2
-  6.82%    9.263      1 Template:Version
-  4.55%    6.187      7 Template:ComboBox
-  4.44%    6.033      8 Template:KEY
-  4.41%    5.987      5 Template:Clear
+100.00%  148.800      1 -total
+ 17.87%   26.584      1 Template:PartDesign_Tools_navi/cs
+ 15.22%   22.646      1 Template:Userdocnavi/cs
+ 10.21%   15.194      3 Template:CheckBox
+  9.90%   14.732      8 Template:KEY
+  7.71%   11.479      1 Template:Version
+  7.57%   11.267      1 Template:Sketcher_Tools_navi/cs
+  7.35%   10.933      3 Template:Navigation_menu_2
+  7.20%   10.713      1 Template:TutorialInfo
+  5.92%    8.810      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120181512 and revision id 1741666. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120182821 and revision id 1741668. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
