--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -223,7 +223,7 @@
 <ol><li>Vyberte jednu z vodorovn&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te hodnotu <b>11 mm</b>.</li>
 <li>Vyberte jednu z vertik&aacute;ln&iacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te hodnotu <b>5 mm</b>.</li>
 <li>M&#283;li byste z&iacute;skat n&#283;co podobn&eacute;ho jako na <b>Obr.: CC1</b>.</li></ol>
-<p><b>Step E: Close the sketch</b>
+<p><b>Krok E: Ukon&#269;en&iacute; n&aacute;&#269;rtku</b>
 </p>
 <dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>. <b>Sketch002</b> is not fully constrained at this stage.</dd></dl>
 <p><b>Step F: Make previous sketches visible</b>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120182823
+Cached time: 20260120183143
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.306 seconds
-Real time usage: 1.477 seconds
+Real time usage: 0.556 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41812/2097152 bytes
 Template argument size: 11568/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  148.800      1 -total
- 17.87%   26.584      1 Template:PartDesign_Tools_navi/cs
- 15.22%   22.646      1 Template:Userdocnavi/cs
- 10.21%   15.194      3 Template:CheckBox
-  9.90%   14.732      8 Template:KEY
-  7.71%   11.479      1 Template:Version
-  7.57%   11.267      1 Template:Sketcher_Tools_navi/cs
-  7.35%   10.933      3 Template:Navigation_menu_2
-  7.20%   10.713      1 Template:TutorialInfo
-  5.92%    8.810      7 Template:ComboBox
+100.00%   69.252      1 -total
+ 24.07%   16.666      1 Template:Sketcher_Tools_navi/cs
+ 21.92%   15.182      1 Template:PartDesign_Tools_navi/cs
+ 14.64%   10.137      3 Template:Navigation_menu_2
+ 11.62%    8.048      1 Template:Userdocnavi/cs
+  9.86%    6.830      7 Template:ComboBox
+  5.92%    4.097      1 Template:TutorialInfo
+  5.89%    4.076      3 Template:CheckBox
+  5.37%    3.716      5 Template:Clear
+  3.73%    2.581     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120182821 and revision id 1741668. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120183142 and revision id 1741670. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
