--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -225,7 +225,7 @@
 <li>M&#283;li byste z&iacute;skat n&#283;co podobn&eacute;ho jako na <b>Obr.: CC1</b>.</li></ol>
 <p><b>Krok E: Ukon&#269;en&iacute; n&aacute;&#269;rtku</b>
 </p>
-<dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>. <b>Sketch002</b> is not fully constrained at this stage.</dd></dl>
+<dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>. <b>Sketch002</b> nen&iacute; v t&eacute;to f&aacute;zi pln&#283; zavazben.</dd></dl>
 <p><b>Step F: Make previous sketches visible</b>
 </p>
 <dl><dd>To use <a href="../Sketcher_External.html" title="Sketcher External">external geometry</a>, the sketches whose elements we want to reference must be visible. Make sure <b>Sketch</b> and <b>Sketch001</b> are both visible. Use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Spacebar</span> to toggle visibility if needed. Expand the <b>Pad</b> node in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a> to access <b>Sketch001</b>.</dd></dl>
@@ -407,15 +407,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120183143
+Cached time: 20260120183618
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.306 seconds
-Real time usage: 0.556 seconds
+CPU time usage: 0.290 seconds
+Real time usage: 0.762 seconds
 Preprocessor visited node count: 834/1000000
-Post&#8208;expand include size: 41812/2097152 bytes
-Template argument size: 11568/2097152 bytes
+Post&#8208;expand include size: 41815/2097152 bytes
+Template argument size: 11571/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.252      1 -total
- 24.07%   16.666      1 Template:Sketcher_Tools_navi/cs
- 21.92%   15.182      1 Template:PartDesign_Tools_navi/cs
- 14.64%   10.137      3 Template:Navigation_menu_2
- 11.62%    8.048      1 Template:Userdocnavi/cs
-  9.86%    6.830      7 Template:ComboBox
-  5.92%    4.097      1 Template:TutorialInfo
-  5.89%    4.076      3 Template:CheckBox
-  5.37%    3.716      5 Template:Clear
-  3.73%    2.581     19 Template:Button
+100.00%   76.493      1 -total
+ 32.48%   24.848      1 Template:PartDesign_Tools_navi/cs
+ 29.74%   22.748      3 Template:Navigation_menu_2
+ 20.85%   15.948      1 Template:Userdocnavi/cs
+ 13.61%   10.409      1 Template:Sketcher_Tools_navi/cs
+  4.78%    3.659      7 Template:ComboBox
+  4.55%    3.484      1 Template:TutorialInfo
+  4.26%    3.262     19 Template:Button
+  3.91%    2.990      1 Template:Version
+  3.66%    2.802      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120183142 and revision id 1741670. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120183617 and revision id 1741672. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
