--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -226,7 +226,7 @@
 <p><b>Krok E: Ukon&#269;en&iacute; n&aacute;&#269;rtku</b>
 </p>
 <dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>. <b>Sketch002</b> nen&iacute; v t&eacute;to f&aacute;zi pln&#283; zavazben.</dd></dl>
-<p><b>Step F: Make previous sketches visible</b>
+<p><b>Krok F: Zobrazen&iacute; p&#345;edchoz&iacute;ch n&aacute;&#269;rtk&#367;</b>
 </p>
 <dl><dd>To use <a href="../Sketcher_External.html" title="Sketcher External">external geometry</a>, the sketches whose elements we want to reference must be visible. Make sure <b>Sketch</b> and <b>Sketch001</b> are both visible. Use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Spacebar</span> to toggle visibility if needed. Expand the <b>Pad</b> node in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a> to access <b>Sketch001</b>.</dd></dl>
 <p><b>Step G: Add external geometry and fully constrain the sketch</b>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120183618
+Cached time: 20260120183706
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.290 seconds
-Real time usage: 0.762 seconds
+CPU time usage: 0.303 seconds
+Real time usage: 1.138 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41815/2097152 bytes
 Template argument size: 11571/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.493      1 -total
- 32.48%   24.848      1 Template:PartDesign_Tools_navi/cs
- 29.74%   22.748      3 Template:Navigation_menu_2
- 20.85%   15.948      1 Template:Userdocnavi/cs
- 13.61%   10.409      1 Template:Sketcher_Tools_navi/cs
-  4.78%    3.659      7 Template:ComboBox
-  4.55%    3.484      1 Template:TutorialInfo
-  4.26%    3.262     19 Template:Button
-  3.91%    2.990      1 Template:Version
-  3.66%    2.802      3 Template:CheckBox
+100.00%  105.737      1 -total
+ 19.93%   21.073      1 Template:Userdocnavi/cs
+ 15.45%   16.339      1 Template:PartDesign_Tools_navi/cs
+ 14.98%   15.842      3 Template:Navigation_menu_2
+ 13.90%   14.702      1 Template:Sketcher_Tools_navi/cs
+ 11.60%   12.265      7 Template:ComboBox
+  9.37%    9.909      3 Template:CheckBox
+  7.17%    7.586      1 Template:TutorialInfo
+  6.37%    6.739      8 Template:KEY
+  5.06%    5.347      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120183617 and revision id 1741672. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120183705 and revision id 1741675. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
