Created page with ": Chcete-li použít [[Sketcher_External|externí geometrii]], musí být viditelné náčrtky, na které se chcete odkazovat. Ujistěte se, že jsou viditelné jak '''Sketch''' tak '''Sketch001'''. Použijte {{KEY|Mezerník}} pro přepínání viditelnosti v případě potřeby. Rozbalte uzel '''Pad''' ve [[Tree_view|stromovém pohledu]], abyste získali přístup ke '''Sketch001'''."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -228,7 +228,7 @@
 <dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>. <b>Sketch002</b> nen&iacute; v t&eacute;to f&aacute;zi pln&#283; zavazben.</dd></dl>
 <p><b>Krok F: Zobrazen&iacute; p&#345;edchoz&iacute;ch n&aacute;&#269;rtk&#367;</b>
 </p>
-<dl><dd>To use <a href="../Sketcher_External.html" title="Sketcher External">external geometry</a>, the sketches whose elements we want to reference must be visible. Make sure <b>Sketch</b> and <b>Sketch001</b> are both visible. Use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Spacebar</span> to toggle visibility if needed. Expand the <b>Pad</b> node in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a> to access <b>Sketch001</b>.</dd></dl>
+<dl><dd>Chcete-li pou&#382;&iacute;t <a href="../Sketcher_External.html" title="Sketcher External">extern&iacute; geometrii</a>, mus&iacute; b&yacute;t viditeln&eacute; n&aacute;&#269;rtky, na kter&eacute; se chcete odkazovat. Ujist&#283;te se, &#382;e jsou viditeln&eacute; jak <b>Sketch</b> tak <b>Sketch001</b>. Pou&#382;ijte <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mezern&iacute;k</span> pro p&#345;ep&iacute;n&aacute;n&iacute; viditelnosti v p&#345;&iacute;pad&#283; pot&#345;eby. Rozbalte uzel <b>Pad</b> ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m pohledu</a>, abyste z&iacute;skali p&#345;&iacute;stup ke <b>Sketch001</b>.</dd></dl>
 <p><b>Step G: Add external geometry and fully constrain the sketch</b>
 </p>
 <ol><li>Double click <b>Sketch002</b> to enter edit mode.</li>
@@ -407,15 +407,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120183706
+Cached time: 20260120184405
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.303 seconds
-Real time usage: 1.138 seconds
+CPU time usage: 0.298 seconds
+Real time usage: 0.502 seconds
 Preprocessor visited node count: 834/1000000
-Post&#8208;expand include size: 41815/2097152 bytes
-Template argument size: 11571/2097152 bytes
+Post&#8208;expand include size: 41816/2097152 bytes
+Template argument size: 11572/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  105.737      1 -total
- 19.93%   21.073      1 Template:Userdocnavi/cs
- 15.45%   16.339      1 Template:PartDesign_Tools_navi/cs
- 14.98%   15.842      3 Template:Navigation_menu_2
- 13.90%   14.702      1 Template:Sketcher_Tools_navi/cs
- 11.60%   12.265      7 Template:ComboBox
-  9.37%    9.909      3 Template:CheckBox
-  7.17%    7.586      1 Template:TutorialInfo
-  6.37%    6.739      8 Template:KEY
-  5.06%    5.347      5 Template:Clear
+100.00%   54.872      1 -total
+ 18.46%   10.132      1 Template:Sketcher_Tools_navi/cs
+ 18.12%    9.945      1 Template:PartDesign_Tools_navi/cs
+ 14.52%    7.968      1 Template:Userdocnavi/cs
+ 14.34%    7.869      3 Template:Navigation_menu_2
+  8.57%    4.704      7 Template:ComboBox
+  8.30%    4.557      1 Template:Version
+  6.83%    3.748      3 Template:CheckBox
+  5.95%    3.265      1 Template:TutorialInfo
+  4.94%    2.713     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120183705 and revision id 1741675. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120184404 and revision id 1741677. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
