Created page with "'''Krok G: Přidání vnější geometrie a plné zavazbení náčrtu.'''"

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -229,7 +229,7 @@
 <p><b>Krok F: Zobrazen&iacute; p&#345;edchoz&iacute;ch n&aacute;&#269;rtk&#367;</b>
 </p>
 <dl><dd>Chcete-li pou&#382;&iacute;t <a href="../Sketcher_External.html" title="Sketcher External">extern&iacute; geometrii</a>, mus&iacute; b&yacute;t viditeln&eacute; n&aacute;&#269;rtky, na kter&eacute; se chcete odkazovat. Ujist&#283;te se, &#382;e jsou viditeln&eacute; jak <b>Sketch</b> tak <b>Sketch001</b>. Pou&#382;ijte <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mezern&iacute;k</span> pro p&#345;ep&iacute;n&aacute;n&iacute; viditelnosti v p&#345;&iacute;pad&#283; pot&#345;eby. Rozbalte uzel <b>Pad</b> ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m pohledu</a>, abyste z&iacute;skali p&#345;&iacute;stup ke <b>Sketch001</b>.</dd></dl>
-<p><b>Step G: Add external geometry and fully constrain the sketch</b>
+<p><b>Krok G: P&#345;id&aacute;n&iacute; vn&#283;j&scaron;&iacute; geometrie a pln&eacute; zavazben&iacute; n&aacute;&#269;rtu.</b>
 </p>
 <ol><li>Double click <b>Sketch002</b> to enter edit mode.</li>
 <li>Rotate the view so you can clearly see the points as shown in <b>Fig: CC2</b>. This will ease subsequent steps. Note that the rectangle's initial position may be different in your sketch.</li>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120184405
+Cached time: 20260120184519
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.298 seconds
-Real time usage: 0.502 seconds
+CPU time usage: 0.273 seconds
+Real time usage: 0.421 seconds
 Preprocessor visited node count: 834/1000000
 Post&#8208;expand include size: 41816/2097152 bytes
 Template argument size: 11572/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.872      1 -total
- 18.46%   10.132      1 Template:Sketcher_Tools_navi/cs
- 18.12%    9.945      1 Template:PartDesign_Tools_navi/cs
- 14.52%    7.968      1 Template:Userdocnavi/cs
- 14.34%    7.869      3 Template:Navigation_menu_2
-  8.57%    4.704      7 Template:ComboBox
-  8.30%    4.557      1 Template:Version
-  6.83%    3.748      3 Template:CheckBox
-  5.95%    3.265      1 Template:TutorialInfo
-  4.94%    2.713     19 Template:Button
+100.00%   60.230      1 -total
+ 29.51%   17.775      1 Template:Sketcher_Tools_navi/cs
+ 20.45%   12.316      1 Template:Userdocnavi/cs
+ 17.85%   10.752      3 Template:Navigation_menu_2
+ 14.61%    8.802      1 Template:PartDesign_Tools_navi/cs
+  6.47%    3.898      3 Template:CheckBox
+  5.99%    3.610      7 Template:ComboBox
+  4.98%    2.996     19 Template:Button
+  4.23%    2.550      8 Template:KEY
+  3.85%    2.319      1 Template:TutorialInfo
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120184404 and revision id 1741677. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120184519 and revision id 1741679. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
