--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -241,7 +241,7 @@
 <li>Vyberte bod <b>P1</b> a bod <b>P3</b> a pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazbu</a>. Obd&eacute;ln&iacute;k bude zarovn&aacute;n s pozic&iacute; X bodu <b>P1</b>.</li>
 <li>Vyberte bod <b>P2</b> a bod <b>P3</b> a pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute; vazbu</a>. Obd&eacute;ln&iacute;k bude zarovn&aacute;n s pozic&iacute; Y bodu  <b>P2</b>.</li>
 <li>M&#283;li byste m&iacute;t pln&#283; zavazben&yacute; n&aacute;&#269;rt podobn&yacute; <b>Obr.: CC3</b>.</li></ol>
-<p><b>Step H: Close the sketch</b>
+<p><b>Krok H: Ukon&#269;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <dl><dd>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>.</dd></dl>
 <p><b><big>Pocket</big></b>
@@ -407,12 +407,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120190721
+Cached time: 20260120192622
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.314 seconds
-Real time usage: 1.634 seconds
+CPU time usage: 0.359 seconds
+Real time usage: 1.649 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41756/2097152 bytes
 Template argument size: 11564/2097152 bytes
@@ -423,19 +423,19 @@ Unstrip post&#8208;expand size: 2037/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  137.232      1 -total
- 26.77%   36.737      1 Template:Sketcher_Tools_navi/cs
- 19.45%   26.691      3 Template:Navigation_menu_2
- 18.85%   25.862      1 Template:PartDesign_Tools_navi/cs
- 14.82%   20.342      1 Template:Userdocnavi/cs
- 10.14%   13.920     19 Template:Button
-  9.95%   13.661      5 Template:Clear
-  5.37%    7.373      3 Template:CheckBox
-  5.33%    7.309      8 Template:KEY
-  3.74%    5.132      7 Template:ComboBox
+100.00%  180.369      1 -total
+ 25.13%   45.323      1 Template:PartDesign_Tools_navi/cs
+ 20.44%   36.876      1 Template:Userdocnavi/cs
+  9.73%   17.559      1 Template:Sketcher_Tools_navi/cs
+  9.23%   16.644      3 Template:Navigation_menu_2
+  7.19%   12.977      3 Template:CheckBox
+  6.76%   12.186     19 Template:Button
+  6.18%   11.142      1 Template:Verze
+  5.52%    9.958      7 Template:ComboBox
+  5.47%    9.873      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120190719 and revision id 1741681. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192620 and revision id 1741683. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
