Created page with "'''<big>Kapsa</big>'''"

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -4,7 +4,7 @@
 <li><a href="../fr/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Tutoriel d'introduction V0.19 (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="Esercitazione di base su Part Design 019 (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Projekt Cz&#281;&#347;ci 019 (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--low" title="&#1059;&#1088;&#1086;&#1082; &#1087;&#1086; &#1073;&#1072;&#1079;&#1086;&#1074;&#1099;&#1084; &#1074;&#1086;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086;&#1089;&#1090;&#1103;&#1084; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; Part Design 019 (1% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--low" title="&#1058;&#1091;&#1090;&#1086;&#1088;&#1110;&#1072;&#1083; &#1079; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1091;&#1074;&#1072;&#1085;&#1085;&#1103; &#1073;&#1072;&#1079;&#1086;&#1074;&#1086;&#1111; &#1076;&#1077;&#1090;&#1072;&#1083;&#1110; 019 (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" style="width: 230px; float: right; margin-left: 1em">
@@ -244,7 +244,7 @@
 <p><b>Krok H: Ukon&#269;en&iacute; n&aacute;&#269;rtu</b>
 </p>
 <dl><dd>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</dd></dl>
-<p><b><big>Pocket</big></b>
+<p><b><big>Kapsa</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pck01.png&amp;filetimestamp=20221104163023&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pck01.png" decoding="async" width="300" height="265" class="mw-file-element" data-file-width="370" data-file-height="327"></a><figcaption>Fig: CC4</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_pck02-mir.png&amp;filetimestamp=20221104164346&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_pck02-mir.png" decoding="async" width="300" height="257" class="mw-file-element" data-file-width="369" data-file-height="316"></a><figcaption>Fig: CC5</figcaption></figure>
@@ -407,35 +407,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120192641
+Cached time: 20260120192811
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.286 seconds
-Real time usage: 0.611 seconds
+CPU time usage: 0.311 seconds
+Real time usage: 1.537 seconds
 Preprocessor visited node count: 829/1000000
 Post&#8208;expand include size: 41759/2097152 bytes
 Template argument size: 11567/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2037/5000000 bytes
+Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.035      1 -total
- 18.27%    9.322      1 Template:Sketcher_Tools_navi/cs
- 18.12%    9.248      1 Template:Userdocnavi/cs
- 16.88%    8.617      1 Template:PartDesign_Tools_navi/cs
- 14.03%    7.160      3 Template:Navigation_menu_2
-  9.76%    4.979      8 Template:KEY
-  7.81%    3.985     19 Template:Button
-  6.94%    3.540      7 Template:ComboBox
-  5.22%    2.664      3 Template:CheckBox
-  4.83%    2.465      1 Template:TutorialInfo
+100.00%  183.005      1 -total
+ 26.29%   48.117      1 Template:PartDesign_Tools_navi/cs
+ 15.81%   28.925      3 Template:Navigation_menu_2
+ 11.91%   21.790      1 Template:Userdocnavi/cs
+ 11.88%   21.739      1 Template:Sketcher_Tools_navi/cs
+  8.96%   16.400     19 Template:Button
+  7.96%   14.575      7 Template:ComboBox
+  5.43%    9.935      3 Template:CheckBox
+  5.19%    9.492      5 Template:Clear
+  4.55%    8.329      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192640 and revision id 1741685. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120192809 and revision id 1741687. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
