Created page with "Strany se vytvářejí podobným způsobem, ale místo odstraňování materiálu budeme materiál přidávat pomocí funkce [[PartDesign_Pad|Deska]]."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -270,7 +270,7 @@
 <p><span id="Sides"></span>
 </p>
 <h2><span class="mw-headline" id="Strany">Strany</span></h2>
-<p>The sides are created in a similar manner, but instead of removing material we will add material with a <a href="../PartDesign_Pad.html" title="PartDesign Pad">pad</a> feature.
+<p>Strany se vytv&aacute;&#345;ej&iacute; podobn&yacute;m zp&#367;sobem, ale m&iacute;sto odstra&#328;ov&aacute;n&iacute; materi&aacute;lu budeme materi&aacute;l p&#345;id&aacute;vat pomoc&iacute; funkce <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>.
 </p><p><b><big>Sketch003</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_sk3_1.png&amp;filetimestamp=20221113151438&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_sk3_1.png" decoding="async" width="300" height="175" class="mw-file-element" data-file-width="301" data-file-height="176"></a><figcaption>Fig: SD1</figcaption></figure>
@@ -409,12 +409,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120194804
+Cached time: 20260120194926
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.288 seconds
-Real time usage: 0.420 seconds
+CPU time usage: 0.293 seconds
+Real time usage: 0.522 seconds
 Preprocessor visited node count: 830/1000000
 Post&#8208;expand include size: 41772/2097152 bytes
 Template argument size: 11578/2097152 bytes
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.611      1 -total
- 26.55%   12.109      1 Template:Userdocnavi/cs
- 22.28%   10.162      1 Template:PartDesign_Tools_navi/cs
- 21.93%   10.003      3 Template:Navigation_menu_2
- 15.92%    7.262      1 Template:Sketcher_Tools_navi/cs
-  5.53%    2.522      1 Template:TutorialInfo
-  4.86%    2.218      7 Template:ComboBox
-  4.40%    2.009      3 Template:CheckBox
-  4.23%    1.930      5 Template:Clear
-  3.72%    1.695     19 Template:Button
+100.00%   79.188      1 -total
+ 35.70%   28.268      1 Template:PartDesign_Tools_navi/cs
+ 24.89%   19.712      3 Template:Navigation_menu_2
+ 10.66%    8.442      1 Template:Userdocnavi/cs
+ 10.54%    8.343      1 Template:Sketcher_Tools_navi/cs
+  6.22%    4.928      5 Template:Clear
+  5.58%    4.419      7 Template:ComboBox
+  4.94%    3.915     19 Template:Button
+  4.52%    3.577      1 Template:TutorialInfo
+  4.15%    3.287      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120194804 and revision id 1741699. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120194925 and revision id 1741701. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
